@@ -2,12 +2,15 @@
 % Please edit documentation in R/trimPlot.R
 \name{trimPlot}
 \alias{trimPlot}
-\title{Plots the 13 expected walking neighborhoods.}
+\title{Plots observed and expected walking neighborhoods.}
 \usage{
-trimPlot(streets = TRUE, add.landmarks = TRUE, color = snowColors())
+trimPlot(streets = TRUE, obs = TRUE, add.landmarks = TRUE,
+  color = cholera::snowColors())
 }
 \arguments{
 \item{streets}{Logical. TRUE plots neighborhoods by street. FALSE plots orthogonal neighborhoods (area).}
+
+\item{obs}{Logical. TRUE uses observed cases. FALSE uses "regular" simulated cases.}
 
 \item{add.landmarks}{Logical. Include landmarks.}
 
@@ -20,7 +23,7 @@ A base R graphics plot.
 Neighborhoods are based on the shortest paths between a fatality's address and its nearest pump.
 }
 \examples{
-trimPlot()
-trimPlot(streets = FALSE)
+# trimPlot()
+# trimPlot(streets = FALSE)
 }
 
